ci: add retry to image builds

--- a/.github/workflows/template-docker-build-php-app-web.yml
+++ b/.github/workflows/template-docker-build-php-app-web.yml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Build and push default image
         uses: docker/build-push-action@v6
-        if: ${{ matrix.DEFAULT_IMAGE == 'true' }}
+        if: matrix.DEFAULT_IMAGE == 'true'
         id: buildx-default
         continue-on-error: true
         with:
@@ -122,7 +122,7 @@ jobs:
 
       - name: Build and push default image
         uses: docker/build-push-action@v6
-        if: steps.buildx-default.outcome != 'success' && ${{ matrix.DEFAULT_IMAGE == 'true' }}
+        if: steps.buildx-default.outcome != 'success' && matrix.DEFAULT_IMAGE == 'true'
         with:
           context: images/php-fpm${{ needs.prepare.outputs.rootless_suffix }}/${{ inputs.app_name }}/context
           build-contexts: |
@@ -141,7 +141,7 @@ jobs:
 
       - name: Build and push the non-default image
         uses: docker/build-push-action@v6
-        if: ${{ matrix.DEFAULT_IMAGE != 'true' }}
+        if: matrix.DEFAULT_IMAGE != 'true'
         id: buildx-non-default
         continue-on-error: true
         with:
@@ -166,7 +166,7 @@ jobs:
 
       - name: Build and push the non-default image
         uses: docker/build-push-action@v6
-        if: steps.buildx-non-default.outcome != 'success' && ${{ matrix.DEFAULT_IMAGE != 'true' }}
+        if: steps.buildx-non-default.outcome != 'success' && matrix.DEFAULT_IMAGE != 'true'
         with:
           context: images/php-fpm${{ needs.prepare.outputs.rootless_suffix }}/${{ inputs.app_name }}/context
           build-contexts: |
