--- a/.github/workflows/template-docker-build-php-app.yml
+++ b/.github/workflows/template-docker-build-php-app.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Build and push default image
         uses: docker/build-push-action@v6
-        if: ${{ matrix.DEFAULT_IMAGE == 'true' }}
+        if: matrix.DEFAULT_IMAGE == 'true'
         id: buildx-default
         continue-on-error: true
         with:
@@ -104,7 +104,7 @@ jobs:
 
       - name: Build and push default image
         uses: docker/build-push-action@v6
-        if: steps.buildx-default.outcome != 'success' && ${{ matrix.DEFAULT_IMAGE == 'true' }}
+        if: steps.buildx-default.outcome != 'success' && matrix.DEFAULT_IMAGE == 'true'
         with:
           context: images/php-fpm${{ needs.prepare.outputs.rootless_suffix }}/${{ inputs.app_name }}/context
           file: images/php-fpm${{ needs.prepare.outputs.rootless_suffix }}/${{ inputs.app_name }}/Dockerfile
@@ -120,7 +120,7 @@ jobs:
 
       - name: Build and push the non-default image
         uses: docker/build-push-action@v6
-        if: ${{ matrix.DEFAULT_IMAGE != 'true' }}
+        if: matrix.DEFAULT_IMAGE != 'true'
         id: buildx-non-default
         continue-on-error: true
         with:
@@ -142,7 +142,7 @@ jobs:
 
       - name: Build and push the non-default image
         uses: docker/build-push-action@v6
-        if: steps.buildx-non-default.outcome != 'success' && ${{ matrix.DEFAULT_IMAGE != 'true' }}
+        if: steps.buildx-non-default.outcome != 'success' && matrix.DEFAULT_IMAGE != 'true'
         with:
           context: images/php-fpm${{ needs.prepare.outputs.rootless_suffix }}/${{ inputs.app_name }}/context
           file: images/php-fpm${{ needs.prepare.outputs.rootless_suffix }}/${{ inputs.app_name }}/Dockerfile
