--- a/.github/workflows/docker-build-elasticsearch.yml
+++ b/.github/workflows/docker-build-elasticsearch.yml
@@ -19,9 +19,15 @@ jobs:
       matrix:
         include:
           - BUILD_TAG: "latest"
-            IMAGE_TAG: "8.13.0"
+            IMAGE_TAG: "8.17.4"
+          - BUILD_TAG: "8.16"
+            IMAGE_TAG: "8.16.6"
+          - BUILD_TAG: "8.15"
+            IMAGE_TAG: "8.15.5"
+          - BUILD_TAG: "8.14"
+            IMAGE_TAG: "8.14.3"
           - BUILD_TAG: "8.13"
-            IMAGE_TAG: "8.13.0"
+            IMAGE_TAG: "8.13.4"
           - BUILD_TAG: "8.12"
             IMAGE_TAG: "8.12.2"
           - BUILD_TAG: "8.11"
@@ -49,7 +55,7 @@ jobs:
           - BUILD_TAG: "8.0"
             IMAGE_TAG: "8.0.1"
           - BUILD_TAG: "7.17"
-            IMAGE_TAG: "7.17.2"
+            IMAGE_TAG: "7.17.28"
           - BUILD_TAG: "7.16"
             IMAGE_TAG: "7.16.3"
           - BUILD_TAG: "7.15"
