--- a/.github/workflows/docker-build-redis.yml
+++ b/.github/workflows/docker-build-redis.yml
@@ -19,7 +19,11 @@ jobs:
       matrix:
         include:
           - BUILD_TAG: "latest"
-            IMAGE_TAG: "7.2"
+            IMAGE_TAG: "8.0"
+          - BUILD_TAG: "8.0"
+            IMAGE_TAG: "8.0"
+          - BUILD_TAG: "7.4"
+            IMAGE_TAG: "7.4"
           - BUILD_TAG: "7.2"
             IMAGE_TAG: "7.2"
           - BUILD_TAG: "7.0"
