feat: update varnish versions
Signed-off-by: János Mikó <mixe3y@gmail.com>

--- a/.github/workflows/docker-build-varnish.yml
+++ b/.github/workflows/docker-build-varnish.yml
@@ -18,12 +18,24 @@ jobs:
     strategy:
       matrix:
         include:
-          #          - BUILD_TAG: "7.5"
-          #            VARNISH_VERSION: "7.5.0-1"
-          #            VARNISH_REPO_VERSION: "75"
-          #            VARNISH_MODULES_BRANCH: "7.5"
-          #            DISTRO: "ubuntu"
-          #            DISTRO_RELEASE: "jammy"
+          - BUILD_TAG: "7.7"
+            VARNISH_VERSION: "7.7.1-1"
+            VARNISH_REPO_VERSION: "77"
+            VARNISH_MODULES_BRANCH: "7.7"
+            DISTRO: "ubuntu"
+            DISTRO_RELEASE: "noble"
+          - BUILD_TAG: "7.6"
+            VARNISH_VERSION: "7.6.3-1"
+            VARNISH_REPO_VERSION: "76"
+            VARNISH_MODULES_BRANCH: "7.6"
+            DISTRO: "ubuntu"
+            DISTRO_RELEASE: "noble"
+          - BUILD_TAG: "7.5"
+            VARNISH_VERSION: "7.5.0-1"
+            VARNISH_REPO_VERSION: "75"
+            VARNISH_MODULES_BRANCH: "7.5"
+            DISTRO: "ubuntu"
+            DISTRO_RELEASE: "noble"
           - BUILD_TAG: "latest"
             VARNISH_VERSION: "7.4.3-1"
             VARNISH_REPO_VERSION: "74"
