--- a/.github/workflows/docker-build-opensearch-dashboards.yml
+++ b/.github/workflows/docker-build-opensearch-dashboards.yml
@@ -18,8 +18,24 @@ jobs:
     strategy:
       matrix:
         include:
+          - BUILD_TAG: "3.0"
+            IMAGE_TAG: "3.0.0"
           - BUILD_TAG: "latest"
-            IMAGE_TAG: "2.12.0"
+            IMAGE_TAG: "2.19.2"
+          - BUILD_TAG: "2.19"
+            IMAGE_TAG: "2.19.2"
+          - BUILD_TAG: "2.18"
+            IMAGE_TAG: "2.18.0"
+          - BUILD_TAG: "2.17"
+            IMAGE_TAG: "2.17.1"
+          - BUILD_TAG: "2.16"
+            IMAGE_TAG: "2.16.0"
+          - BUILD_TAG: "2.15"
+            IMAGE_TAG: "2.15.0"
+          - BUILD_TAG: "2.14"
+            IMAGE_TAG: "2.14.0"
+          - BUILD_TAG: "2.13"
+            IMAGE_TAG: "2.13.0"
           - BUILD_TAG: "2.12"
             IMAGE_TAG: "2.12.0"
           - BUILD_TAG: "2.11"
@@ -47,7 +63,7 @@ jobs:
           - BUILD_TAG: "2.0"
             IMAGE_TAG: "2.0.1"
           - BUILD_TAG: "1.3"
-            IMAGE_TAG: "1.3.15"
+            IMAGE_TAG: "1.3.20"
           - BUILD_TAG: "1.2"
             IMAGE_TAG: "1.2.4"
           - BUILD_TAG: "1.1"
