--- a/.github/workflows/docker-build-opensearch.yml
+++ b/.github/workflows/docker-build-opensearch.yml
@@ -18,6 +18,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - BUILD_TAG: "3.0"
+            IMAGE_TAG: "3.0.0"
           - BUILD_TAG: "latest"
             IMAGE_TAG: "2.19.2"
           - BUILD_TAG: "2.19"
