feat: update varnish versions
Signed-off-by: János Mikó <mixe3y@gmail.com>

--- a/.github/workflows/docker-build-varnish.yml
+++ b/.github/workflows/docker-build-varnish.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - images/.trigger
       - images/varnish/**
+      - .github/workflows/docker-build-varnish.yml
     branches:
       - main
 jobs:
