feat: run pipelines if pipeline file changes
Signed-off-by: János Mikó <mixe3y@gmail.com>

--- a/.github/workflows/docker-build-dnsmasq.yml
+++ b/.github/workflows/docker-build-dnsmasq.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - images/.trigger
       - images/dnsmasq/**
+      - .github/workflows/docker-build-dnsmasq.yml
     branches:
       - main
 jobs:
