--- a/.github/workflows/docker-build-magepack.yml
+++ b/.github/workflows/docker-build-magepack.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - images/.trigger
       - images/magepack/**
+      - .github/workflows/docker-build-magepack.yml
     branches:
       - main
 jobs:
