--- a/.github/workflows/docker-build-elasticsearch.yml
+++ b/.github/workflows/docker-build-elasticsearch.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - images/.trigger
       - images/elasticsearch/**
+      - .github/workflows/docker-build-elasticsearch.yml
     branches:
       - main
 jobs:
@@ -19,59 +20,13 @@ jobs:
       matrix:
         include:
           - BUILD_TAG: "latest"
-            IMAGE_TAG: "8.17.4"
-          - BUILD_TAG: "8.16"
-            IMAGE_TAG: "8.16.6"
-          - BUILD_TAG: "8.15"
-            IMAGE_TAG: "8.15.5"
-          - BUILD_TAG: "8.14"
-            IMAGE_TAG: "8.14.3"
-          - BUILD_TAG: "8.13"
-            IMAGE_TAG: "8.13.4"
-          - BUILD_TAG: "8.12"
-            IMAGE_TAG: "8.12.2"
-          - BUILD_TAG: "8.11"
-            IMAGE_TAG: "8.11.4"
-          - BUILD_TAG: "8.10"
-            IMAGE_TAG: "8.10.4"
-          - BUILD_TAG: "8.9"
-            IMAGE_TAG: "8.9.2"
-          - BUILD_TAG: "8.8"
-            IMAGE_TAG: "8.8.2"
-          - BUILD_TAG: "8.7"
-            IMAGE_TAG: "8.7.1"
-          - BUILD_TAG: "8.6"
-            IMAGE_TAG: "8.6.2"
-          - BUILD_TAG: "8.5"
-            IMAGE_TAG: "8.5.3"
-          - BUILD_TAG: "8.4"
-            IMAGE_TAG: "8.4.3"
-          - BUILD_TAG: "8.3"
-            IMAGE_TAG: "8.3.3"
-          - BUILD_TAG: "8.2"
-            IMAGE_TAG: "8.2.3"
-          - BUILD_TAG: "8.1"
-            IMAGE_TAG: "8.1.3"
-          - BUILD_TAG: "8.0"
-            IMAGE_TAG: "8.0.1"
+            IMAGE_TAG: "9.0.1"
+          - BUILD_TAG: "9.0"
+            IMAGE_TAG: "9.0.1"
+          - BUILD_TAG: "8.18"
+            IMAGE_TAG: "8.18.2"
           - BUILD_TAG: "7.17"
             IMAGE_TAG: "7.17.28"
-          - BUILD_TAG: "7.16"
-            IMAGE_TAG: "7.16.3"
-          - BUILD_TAG: "7.15"
-            IMAGE_TAG: "7.15.1"
-          - BUILD_TAG: "7.14"
-            IMAGE_TAG: "7.14.2"
-          - BUILD_TAG: "7.13"
-            IMAGE_TAG: "7.13.4"
-          - BUILD_TAG: "7.12"
-            IMAGE_TAG: "7.12.1"
-          - BUILD_TAG: "7.11"
-            IMAGE_TAG: "7.11.2"
-          - BUILD_TAG: "7.10"
-            IMAGE_TAG: "7.10.2"
-          - BUILD_TAG: "6.8"
-            IMAGE_TAG: "6.8.18"
     steps:
       - uses: actions/checkout@v4
 
