--- a/.github/workflows/docker-build-opensearch-dashboards.yml
+++ b/.github/workflows/docker-build-opensearch-dashboards.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - images/.trigger
       - images/opensearch-dashboards/**
+      - .github/workflows/docker-build-opensearch-dashboards.yml
     branches:
       - main
 jobs:
@@ -18,56 +19,14 @@ jobs:
     strategy:
       matrix:
         include:
+          - BUILD_TAG: "latest"
+            IMAGE_TAG: "3.0.0"
           - BUILD_TAG: "3.0"
             IMAGE_TAG: "3.0.0"
-          - BUILD_TAG: "latest"
-            IMAGE_TAG: "2.19.2"
           - BUILD_TAG: "2.19"
             IMAGE_TAG: "2.19.2"
-          - BUILD_TAG: "2.18"
-            IMAGE_TAG: "2.18.0"
-          - BUILD_TAG: "2.17"
-            IMAGE_TAG: "2.17.1"
-          - BUILD_TAG: "2.16"
-            IMAGE_TAG: "2.16.0"
-          - BUILD_TAG: "2.15"
-            IMAGE_TAG: "2.15.0"
-          - BUILD_TAG: "2.14"
-            IMAGE_TAG: "2.14.0"
-          - BUILD_TAG: "2.13"
-            IMAGE_TAG: "2.13.0"
-          - BUILD_TAG: "2.12"
-            IMAGE_TAG: "2.12.0"
-          - BUILD_TAG: "2.11"
-            IMAGE_TAG: "2.11.1"
-          - BUILD_TAG: "2.10"
-            IMAGE_TAG: "2.10.0"
-          - BUILD_TAG: "2.9"
-            IMAGE_TAG: "2.9.0"
-          - BUILD_TAG: "2.8"
-            IMAGE_TAG: "2.8.0"
-          - BUILD_TAG: "2.7"
-            IMAGE_TAG: "2.7.0"
-          - BUILD_TAG: "2.6"
-            IMAGE_TAG: "2.6.0"
-          - BUILD_TAG: "2.5"
-            IMAGE_TAG: "2.5.0"
-          - BUILD_TAG: "2.4"
-            IMAGE_TAG: "2.4.1"
-          - BUILD_TAG: "2.3"
-            IMAGE_TAG: "2.3.0"
-          - BUILD_TAG: "2.2"
-            IMAGE_TAG: "2.2.1"
-          - BUILD_TAG: "2.1"
-            IMAGE_TAG: "2.1.0"
-          - BUILD_TAG: "2.0"
-            IMAGE_TAG: "2.0.1"
           - BUILD_TAG: "1.3"
             IMAGE_TAG: "1.3.20"
-          - BUILD_TAG: "1.2"
-            IMAGE_TAG: "1.2.4"
-          - BUILD_TAG: "1.1"
-            IMAGE_TAG: "1.1.0"
     steps:
       - uses: actions/checkout@v4
 
