chore: update typos, devbox conf
Signed-off-by: János Mikó <mixe3y@gmail.com>

--- a/.typos.toml
+++ b/.typos.toml
@@ -3,4 +3,8 @@
 "O_WRONLY" = "O_WRONLY"
 
 [files]
-extend-exclude = ["docs/configuration/xdebug.md"]
+extend-exclude = [
+  "docs/configuration/xdebug.md",
+  "go.mod",
+  "go.sum"
+]
